<resources>
    <string name="app_name">São Miguel Bus</string>
    <string name="test_ad_banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_ad_open" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="ad_unit_home" translatable="false">ca-app-pub-8246676797736648/2987068957</string>
    <string name="find_button">Find</string>
    <string name="find_hint_message">Find out which bus stops at a bus stop</string>
    <string name="stop">Bus Stop</string>
    <string name="no_fav_message">There are no favorite routes :(</string>
    <string name="no_routes_search">There were no routes found :(</string>
    <string name="add_fav_toast_message">Route Added to Favorites!</string>
    <string name="remove_fav_toast_message">Route Removed from Favorites!</string>
    <string name="search_home_button">Search</string>
    <string name="fav_routes_text">Favorite Routes</string>
    <string name="origin_home_hint">Origin</string>
    <string name="destination_home_hint">Destination</string>
    <string name="sunday">Sundays/Holidays</string>
    <string name="sunday_only">Sundays</string>
    <string name="weekdays">Weekdays</string>
    <string name="saturday">Saturdays</string>
    <string name="lang_hint">Language</string>
    <string name="support_creator">Support The Creator</string>
    <string name="rate_app">Rate the App</string>
    <string name="warning_message">The information provided in this application was given by the bus companies and is theirs responsibility.</string>
    <string name="no_routes_found">There are no direct routes between this two bus stops :(</string>
    <string name="home_nb" translatable="false">HOME</string>
    <string name="find_nb">FIND</string>
    <string name="map_nb">MAP</string>
    <string name="settings_nb" translatable="false">INFO</string>
    <string name="toast_search_message">Please fill all fields.</string>
    <string name="toast_link_message">Opening external link...</string>
    <string name="toast_directions_message">Getting directions to</string>
    <string name="toast_calling_message">Call</string>
    <string name="toast_send_message">Send Message to</string>
    <string name="toast_email_message">Send Email to</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="if_you_find_any_problem_or_wrong_times_on_the_app_please_report_it">If you find any problem or wrong times on the app please report it</string>
    <string name="route_dialog_title">"ERROR on Route "</string>
    <string name="route_dialog_message">Oops... There seems to be a problem loading this routes info. Please report it so I can fix it!</string>
    <string name="route_dialog_positive">Report</string>
    <string name="route_dialog_negative">No</string>
    <string name="warning_dialog_title">WARNING</string>
    <string name="warning_dialog_message">This app was not developed nor is supported by any bus company. The present schedule was taken from public documents made available by them. Some routes/hours may be outdated!</string>
    <string name="something_wrong"><u>Something wrong?</u></string>
    <string name="page_dialog_title">Something wrong with Route </string>
    <string name="page_dialog_message">Please report it!</string>
    <string name="map_dest_blank">Destination cannot be blank</string>
    <string name="map_warning">Once it launches change it to bus mode!</string>
    <string name="search_on_map"><u>Search it on the map</u></string>
    <string name="failed_response_title">Failed to connect to the server</string>
    <string name="failed_response_desc">The app couldn\'t connect to the server in order to update the bus schedule data. Information in the app may be outdated </string>
    <string name="loading">Loading</string>
    <string name="catch_bus">Catch Bus to</string>
    <string name="walk_to">Walk To</string>
    <string name="leave_at">Leave at</string>
    <string name="depart_arrive_placeholder">at</string>
    <string-array name="steps_spinner_array">
        <item>Depart</item>
        <item>Arrive</item>
    </string-array>
    <string name="depart">depart</string>
    <string name="arrive">arrive</string>
    <string name="today_placeholder">Today</string>
    <string name="service_run">Service run by</string>
    <string name="map_my_location">My Location</string>
    <string name="new_app_version">New Version Available</string>
    <string name="update_app">A new version of this app with even more features is available to download right now on the Play Store</string>
    <string name="update_label">Update</string>
    <string name="monthly_limit_reached_title">Monthly Map Limit Reached</string>
    <string name="monthly_limit_reached_body">The monthly limit for accessing our map feature has been reached. As a result, you will not be able to use the map feature until the start of the next month. Apologies for any inconvenience this may cause.</string>
    <string name="app_developed_by">This app was developed by\nSousa Dev</string>
    <string name="faq_label">Frequently Asked Questions</string>
    <string name="company_contacts_label">Bus Companies Contact</string>
    <string name="settings_warning_label">App Not Developed by the Bus Companies</string>
    <string name="faq1_question">How can I buy a bus ticket?</string>
    <string name="faq1_answer">The tickets must be bought when you enter the bus and at the moment only cash is accepted.</string>
    <string name="faq2_question">Why so many ads on the app?</string>
    <string name="faq2_answer">This application was created by an individual and is not supported by any company. Ads help to monetize the time spent on its development.</string>
    <string name="contact_dev">Contact the Developer</string>
    <string name="no_location_permission">The app has no permission to access your location.</string>
    <string name="double_tap_maps">Double click to open a full map view</string>
</resources>