<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/report_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/contact_dev"
        android:textColor="#2196F3"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/button_support_creator"
        app:layout_constraintStart_toStartOf="@+id/button_support_creator"
        app:layout_constraintTop_toBottomOf="@+id/button_support_creator" />

    <View
        android:id="@+id/divider4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/settings_info_1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sousadev_logo"
        app:layout_constraintTop_toBottomOf="@+id/sousadev_logo" />

    <View
        android:id="@+id/divider6"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/settings_info_1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/sousadev_logo"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <View
        android:id="@+id/divider7"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/settings_info_1"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="@+id/sousadev_logo"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <View
        android:id="@+id/divider8"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/settings_info_1"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="@+id/sousadev_logo"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <View
        android:id="@+id/divider9"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="-15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="-15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="@+id/settings_info_1"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="@+id/sousadev_logo"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/sousadev_logo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="@+id/adtemplate_home"
        app:layout_constraintTop_toBottomOf="@+id/adtemplate_home"
        app:srcCompat="@mipmap/sousa_dev_logo_bg_round" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adtemplate_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:adSize="BANNER"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.google.android.gms.ads.AdView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_template_settings"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#218732"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/copyright_credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Copyright © 2023\nSousa Dev "
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_template_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/report_mail"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/settings_info_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:maxLines="5"
        android:text="@string/app_developed_by"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/sousadev_logo"
        app:layout_constraintEnd_toEndOf="@+id/adtemplate_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sousadev_logo"
        app:layout_constraintTop_toTopOf="@+id/sousadev_logo" />

    <TextView
        android:id="@+id/settings_info_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLines="5"
        android:text="@string/settings_warning_label"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/adtemplate_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sousadev_logo"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/settings_info_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLines="5"
        android:text="@string/company_contacts_label"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/adtemplate_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sousadev_logo"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <TextView
        android:id="@+id/settings_info_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLines="5"
        android:text="@string/faq_label"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/adtemplate_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sousadev_logo"
        app:layout_constraintTop_toTopOf="@+id/imageView7" />

    <TextView
        android:id="@+id/settings_info_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLines="5"
        android:text="@string/rate_app"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/adtemplate_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sousadev_logo"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <TextView
        android:id="@+id/settings_info_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:maxLines="5"
        android:text="@string/support_creator"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/adtemplate_home"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/sousadev_logo"
        app:layout_constraintTop_toTopOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/sousadev_logo"
        app:layout_constraintStart_toStartOf="@+id/sousadev_logo"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        app:srcCompat="@drawable/baseline_warning_24" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/divider6"
        app:srcCompat="@drawable/bus_icon" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/divider7"
        app:srcCompat="@drawable/baseline_question_mark_24" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/divider8"
        app:srcCompat="@drawable/baseline_star_rate_24" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="72dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/divider9"
        app:srcCompat="@drawable/baseline_monetization_on_24" />

    <Button
        android:id="@+id/button_not_developed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider6"
        app:layout_constraintEnd_toEndOf="@+id/divider6"
        app:layout_constraintStart_toStartOf="@+id/divider6"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <Button
        android:id="@+id/button_rate_app"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider9"
        app:layout_constraintEnd_toEndOf="@+id/divider6"
        app:layout_constraintStart_toStartOf="@+id/divider6"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <Button
        android:id="@+id/button_support_creator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="-20dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/divider6"
        app:layout_constraintStart_toStartOf="@+id/divider6"
        app:layout_constraintTop_toBottomOf="@+id/divider9" />

    <Button
        android:id="@+id/button_bus_contact"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider7"
        app:layout_constraintEnd_toEndOf="@+id/divider6"
        app:layout_constraintStart_toStartOf="@+id/divider6"
        app:layout_constraintTop_toBottomOf="@+id/divider6" />

    <Button
        android:id="@+id/button_faq"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider8"
        app:layout_constraintEnd_toEndOf="@+id/divider6"
        app:layout_constraintStart_toStartOf="@+id/divider6"
        app:layout_constraintTop_toBottomOf="@+id/divider7" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/settings_info_2"
        app:layout_constraintStart_toEndOf="@+id/settings_info_2"
        app:layout_constraintTop_toTopOf="@+id/settings_info_2"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/settings_info_3"
        app:layout_constraintStart_toEndOf="@+id/settings_info_2"
        app:layout_constraintTop_toTopOf="@+id/settings_info_3"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/settings_info_4"
        app:layout_constraintStart_toEndOf="@+id/settings_info_2"
        app:layout_constraintTop_toTopOf="@+id/settings_info_4"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/settings_info_5"
        app:layout_constraintStart_toEndOf="@+id/settings_info_2"
        app:layout_constraintTop_toTopOf="@+id/settings_info_5"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/settings_info_6"
        app:layout_constraintStart_toEndOf="@+id/settings_info_2"
        app:layout_constraintTop_toTopOf="@+id/settings_info_6"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

</androidx.constraintlayout.widget.ConstraintLayout>